<resources>
    <string name="app_name">Loans</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="card_list" translatable="false">Card list</string>
    <string name="offer_sum">Sum:</string>
    <string name="offer_time">Time:</string>
    <string name="offer_rate">Rate:</string>
    <string name="offer_icon_description">Logo</string>
    <string name="apply_offer">Apply</string>
    <string name="cards_title">Cards</string>
    <string name="filter_description">filter</string>
    <string name="loans_title">Loans</string>
    <string name="apply_offer_now">Apply now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="other_title">Other</string>
    <string name="sorting">Sorting for</string>
    <string name="rating">Rating</string>
    <string name="sum">Sum</string>
    <string name="apply_all_offer">Apply all offer</string>
    <string name="connection_error">Connection error. Check internet connection</string>
    <string name="no_connection">No connection to the server \nCheck your internet connection</string>
</resources>
