<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:id="@+id/offer_name"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="74dp"
                android:layout_marginRight="74dp"
                android:text="@string/app_name"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/offer_rating"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="4.5" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:padding="6dp">

            <ImageView
                android:id="@+id/offer_icon"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/offer_icon_description" />

            <TextView
                android:id="@+id/offer_sum"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignTop="@id/offer_icon"
                android:layout_toStartOf="@id/open_button"
                android:layout_toLeftOf="@id/open_button"
                android:layout_toEndOf="@id/offer_icon"
                android:layout_toRightOf="@id/offer_icon"
                android:padding="4dp"
                android:text="@string/offer_sum"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/offer_time"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/offer_sum"
                android:layout_toStartOf="@id/open_button"
                android:layout_toLeftOf="@id/open_button"
                android:layout_toEndOf="@id/offer_icon"
                android:layout_toRightOf="@id/offer_icon"
                android:padding="4dp"
                android:text="@string/offer_time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/offer_rate"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/offer_time"
                android:layout_toStartOf="@id/open_button"
                android:layout_toLeftOf="@id/open_button"
                android:layout_toEndOf="@id/offer_icon"
                android:layout_toRightOf="@id/offer_icon"
                android:padding="4dp"
                android:text="@string/offer_rate"
                android:textSize="12sp" />

            <Button
                android:id="@+id/open_button"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/apply_button"
                android:text="@string/apply_offer"
                android:textAllCaps="false"
                android:textColor="@color/colorBg"
                android:textSize="12sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>