<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".fragments.CardFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/cards_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/cards_title"
                android:textColor="@color/colorCard"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/cards_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/filter"
                android:contentDescription="@string/filter_description" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/no_connection_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_connection"
        android:textSize="20sp"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cards_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cards_tool_bar" />

    <include
        android:id="@+id/cards_filter_layout"
        layout="@layout/filter_view" />

</RelativeLayout>