<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginTop="56dp"
    android:background="@drawable/dark_bg"
    android:paddingStart="6dp"
    android:paddingTop="6dp"
    android:paddingEnd="6dp"
    android:visibility="invisible">

    <TextView
        android:id="@+id/sorting"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/sorting"
        android:textColor="@color/colorCard"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/rate_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sorting"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/rate_text"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/rating"
            android:textColor="@color/colorBg"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/rating_sorting_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/rate_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_sort"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/sum_text"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/sum"
            android:textColor="@color/colorBg"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/sum_sorting_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sum_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</RelativeLayout>