<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_bg">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="28dp"
            app:cardCornerRadius="12dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="Loans in company "
                    android:textColor="@color/colorTextTitle"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/description_title"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/description_icon"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_card" />

                    <TextView
                        android:id="@+id/description_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/description_icon"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/description_icon"
                        android:layout_toRightOf="@id/description_icon"
                        android:text="@string/offer_sum" />

                    <TextView
                        android:id="@+id/description_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description_sum"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/description_icon"
                        android:layout_toRightOf="@id/description_icon"
                        android:text="@string/offer_time" />

                    <TextView
                        android:id="@+id/description_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description_time"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/description_icon"
                        android:layout_toRightOf="@id/description_icon"
                        android:text="@string/offer_rate" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/btn_layout"
                    android:layout_below="@id/info"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:scrollbars="vertical"
                    android:text="@string/app_name" />

                <LinearLayout
                    android:id="@+id/btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBg"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/issue_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/apply_button"
                        android:text="@string/apply_offer_now"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBg" />

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <ImageButton
            android:id="@+id/description_close_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/close"
            android:elevation="@dimen/cardview_default_elevation" />

    </RelativeLayout>

</LinearLayout>